# ReSource

./: .gitignore  .gitmodules  README.md  pyproject.toml  settings.json.example
app/: config.py  main.py
app/gui/: main_window.py  workers.py
app/gui/pages/: page_analysis.py  page_code_viewer.py  page_export.py  page_functions.py  page_input.py
app/gui/widgets/: function_table.py  graph_view.py  log_panel.py
app/ida_scripts/: collect_artifacts.py
app/mcp/: __init__.py  client.py
app/models/: __init__.py  artifact.py  job.py  recovered_project.py
app/pipeline/: __init__.py  binary_info.py  dotnet_runner.py  exporter.py  extractor.py  heuristics.py  module_classifier.py  reconstructor.py  type_refiner.py
app/services/: __init__.py  cache_service.py  ida_runner.py  job_service.py
app/templates/: CMakeLists.txt.j2  README_recovered.md.j2  exports.def.j2  module.c.j2  proxy.cpp.j2  proxy_CMakeLists.txt.j2  proxy_exports.def.j2  recovered_types.h.j2
scripts/: run_sample.py
tests/: test_mcp_contract.py  test_models.py  test_reconstructor.py
