[project]
name = "resource-recover"
version = "0.1.0"
description = "DLL -> C/C++ source recovery tool via IDA Pro MCP"
requires-python = ">=3.11"

dependencies = [
    "PyQt6>=6.6",
    "httpx>=0.27",
    "anyio>=4.4",
    "pydantic>=2.7",
    "jinja2>=3.1",
    "networkx>=3.3",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-qt>=4.4"]

[project.scripts]
resource-recover = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
